--- a/templates/client.html
+++ b/templates/client.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>LocalNetMessage - Client</title>
-    <link rel="icon" href="/static/favicon.svg" type="image/svg+xml">
+    <link rel="icon" href="/assets/favicon.svg" type="image/svg+xml">
     <link rel="stylesheet" href="/static/style.css?v=2.1">
     <link rel="stylesheet" href="/static/modern-overrides.css?v=2.1">
     <link rel="stylesheet" href="/static/client-modern.css?v=2.1">
