--- a/templates/server.html
+++ b/templates/server.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>LocalNetMessage - Serveur</title>
-    <link rel="icon" href="/static/favicon.svg" type="image/svg+xml">
+    <link rel="icon" href="/assets/favicon.svg" type="image/svg+xml">
     <link rel="stylesheet" href="/static/style.css">
     <link rel="stylesheet" href="/static/modern-overrides.css">
     <link rel="stylesheet" href="/static/themes.css">
