--- a/templates/server.html
+++ b/templates/server.html
@@ -1027,7 +1027,7 @@
     </script>
     
     <!-- Scripts de chiffrement -->
-    <script src="/encryptions/encryption.js"></script>
-    <script src="/encryptions/encryption-ui.js"></script>
+    <script src="/static/encryption.js"></script>
+    <script src="/static/encryption-ui.js"></script>
 </body>
 </html>
